--- a/css/custom.css
+++ b/css/custom.css
@@ -27,12 +27,14 @@
 }
 
 .navbar-nav li a {
-	color: #454444;
-	font-size: 20px;
+	color: #8C8C8C;
+	font-size: 17px;
 	font-weight: bold;
 }
 
 .navbar-nav {
 	margin-left: 50px;
 }
+
+
 
