--- a/css/custom.css
+++ b/css/custom.css
@@ -37,6 +37,6 @@
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-	color: #52B021;
+	color: #8cc63f;
 	background-color: transparent;
 }
