--- a/css/small-business.css
+++ b/css/small-business.css
@@ -8,9 +8,9 @@ body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
 }
 
-.navbar-fixed-top .nav {
-    padding: 15px 0;
-}
+/*.navbar-fixed-top .nav {*/
+    /*padding: 15px 0;*/
+/*}*/
 
 .navbar-fixed-top .navbar-brand {
     padding: 0 15px;
@@ -25,7 +25,7 @@ footer {
         padding-top: 100px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
     }
 
-    .navbar-fixed-top .navbar-brand {
-        padding: 15px 0;
-    }
+    /*.navbar-fixed-top .navbar-brand {*/
+        /*padding: 15px 0;*/
+    /*}*/
 }
