--- a/css/custom.css
+++ b/css/custom.css
@@ -48,6 +48,11 @@
 	text-align: justify;
 	font-size: 16px;
 }
+
+.col {
+    font-size: 20px;
+}
+
 @media(min-width:768px) {
 
 	.top-nav-collapse {
