--- a/css/custom.css
+++ b/css/custom.css
@@ -76,3 +76,29 @@
 
 	}
 }
+
+@media(max-width:1199px) {
+
+    .navbar-nav {
+        margin-left: 0px;
+    }
+
+    .navbar-nav-custom {
+        margin-left: 8%;
+    }
+
+    .navbar-nav li a {
+        font-size: 17px;
+    }
+}
+
+@media(max-width:991px) {
+
+    .navbar-nav li a {
+        font-size: 14px;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-right: 0px;
+    }
+
+}
