changed color in services

--- a/css/custom.css
+++ b/css/custom.css
@@ -53,6 +53,11 @@
     font-size: 20px;
 }
 
+.panel-heading {
+    background-color: #9BC643 !important;
+}
+
+
 @media(min-width:768px) {
 
 	.top-nav-collapse {
