--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -910,7 +910,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #428bca;
+  color: rgb(26, 118, 162);
   text-decoration: none;
 }
 a:hover,
@@ -5018,9 +5018,9 @@ a.list-group-item-danger.active:focus {
   font-size: 16px;
   color: inherit;
 }
-.panel-title > a {
-  color: inherit;
-}
+/*.panel-title > a {*/
+  /*color: inherit;*/
+/*}*/
 .panel-footer {
   padding: 10px 15px;
   background-color: #f5f5f5;
